# pika-port-kafka

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  filters.conf.example
cmake/: protogen.cmake
docs/: FAQ.md  build.md  pika-port-kafka-design.md  pika-port-kafka.conf.example  usage.md
scripts/: build.sh  build_all.sh  create_dual.sh  create_single.sh  delete_dual.sh  delete_single.sh  kafka_env.sh  reset_dual.sh  reset_single.sh
src/: CMakeLists.txt  checkpoint.cc  checkpoint.h  conf.h  event_builder.cc  event_builder.h  event_filter.cc  event_filter.h  json_utils.cc  json_utils.h  kafka_sender.cc  kafka_sender.h  main.cc  master_conn.cc  master_conn.h  migrator_thread.cc  migrator_thread.h  pb_repl_client.cc  pb_repl_client.h  pika_binlog_transverter.cc  pika_binlog_transverter.h  pika_define.h  pika_port.cc  pika_port.h  pikiwi_info.cc  pikiwi_info.h  readme.md  resp_parser.cc  resp_parser.h  rsync_client_simple.cc  rsync_client_simple.h  snapshot_sender.cc  snapshot_sender.h  static_pack.sh  trysync_thread.cc  trysync_thread.h
